fixed the issue with the nav bar, aligning the content to the center of the web page properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@
 body {
   color: #334858;
   max-width: 100vw;
-  
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
 }
@@ -17,18 +16,22 @@ body::-webkit-scrollbar {
 
 nav {
   background-color: #445b6e;
-  padding: 20px;
+  padding: 20px 0px;
 }
 
 nav ul {
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
   justify-content: center;
   list-style-type: none;
   display: flex;
+  justify-content: space-around;
+  padding: 0px;
 }
 
 nav ul a {
   font-size: 1.1rem;
-  margin-right: 10px;
   color: #dab823;
   text-decoration: none;
 }
@@ -223,7 +226,6 @@ nav ul a {
     float: none;
     width: 95%;
     padding: 15px 5px;
-    /* overflow: hidden; */
   }
 
   .main-articles {
